--- a/onlybess.ipynb
+++ b/onlybess.ipynb
@@ -11,35 +11,25 @@
     "price_column = 'Vážený průměr cen (EUR/MWh)'\n",
     "df = pd.read_excel(\"data/OTE_2024.xlsx\", sheet_name=\"VDT (EUR)\", skiprows=5, usecols=\"A:L\")\n",
     "\n",
-    "#     # 2. Принудительно конвертируем колонку с ценой в числовой формат\n",
-    "#     # Любой текст ('N/A', '-') превратится в NaN (маркер отсутствия данных)\n",
     "# df[price_column] = pd.to_numeric(df[price_column], errors='coerce')\n",
     "\n",
-    "#     # 3. Создаем временной столбец\n",
     "# start_time = df['Časový interval'].str.split('-').str[0]\n",
     "# df['datetime'] = pd.to_datetime(df['Den'].astype(str) + ' ' + start_time)\n",
     "\n",
-    "#     # 4. Устанавливаем 'datetime' как индекс (ключевой шаг)\n",
     "# df.set_index('datetime', inplace=True)\n",
     "    \n",
-    "#     # 5. Удаляем ненужные столбцы\n",
     "# df.drop(columns=['Den', 'Časový interval'], inplace=True)\n",
     "\n",
-    "#     # 6. Сортируем и ОЧИЩАЕМ данные от NaN\n",
     "# df.sort_index(inplace=True)\n",
     "# df.drop_duplicates(inplace=True)\n",
     "    \n",
     "#     # fillna заполнит пропуски, которые появились после to_numeric\n",
     "# df.fillna(method='ffill', inplace=True)\n",
-    "# df.fillna(method='bfill', inplace=True) # Заполняем в обратную сторону на случай, если NaN в самом начале\n",
+    "# df.fillna(method='bfill', inplace=True) \n",
     "    \n",
-    "#     # 7. Фильтруем данные по нужному диапазону дат\n",
     "# # start_date = '2025-01-01 00:00:00'\n",
-    "# # end_date = '2025-07-31 23:59:59' # Убедитесь, что ваш диапазон корректен\n",
+    "# # end_date = '2025-07-31 23:59:59' \n",
     "# # vdt2025 = df.loc[start_date:end_date].copy()\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "#############################################################################################################\n",
     "\n",
