--- a/fvebess.ipynb
+++ b/fvebess.ipynb
@@ -116,10 +116,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b66f1c00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tamerlan.Ismakatov\\AppData\\Local\\Temp\\ipykernel_34576\\1703595386.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  VDT['Vážený průměr cen (EUR/MWh)'].fillna(method='ffill', inplace=True)\n",
+      "C:\\Users\\Tamerlan.Ismakatov\\AppData\\Local\\Temp\\ipykernel_34576\\1703595386.py:9: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  VDT['Vážený průměr cen (EUR/MWh)'].fillna(method='ffill', inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -134,26 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "70c091e6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mFveBessOptimizer\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m analyze_projects, FVE_BESS_Optimizer, export_full_report_to_excel\n\u001b[32m      3\u001b[39m PROJECTS_CONFIG = {\n\u001b[32m      4\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mfve_bess_phase2\u001b[39m\u001b[33m'\u001b[39m: {\n\u001b[32m      5\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mfve_bess_phase2\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     14\u001b[39m     }\n\u001b[32m     15\u001b[39m }\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m results = analyze_projects(DT, VDT, FVE, projects_config=PROJECTS_CONFIG,\n\u001b[32m     17\u001b[39m                              analysis_period_days=\u001b[32m365\u001b[39m, show_daily_reports=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Tamerlan.Ismakatov\\Desktop\\workdir\\report\\project1i2\\FveBessOptimizer.py:1242\u001b[39m, in \u001b[36manalyze_projects\u001b[39m\u001b[34m(dt_prices_data, vdt_prices_data, fve_generation_data, projects_config, analysis_period_days, show_daily_reports)\u001b[39m\n\u001b[32m   1237\u001b[39m vdt_day = vdt_prices_data.iloc[start_idx:\n\u001b[32m   1238\u001b[39m                                end_idx][\u001b[33m'\u001b[39m\u001b[33mVážený průměr cen (EUR/MWh)\u001b[39m\u001b[33m'\u001b[39m].values\n\u001b[32m   1240\u001b[39m fve_day = fve_generation_data.iloc[start_idx:\n\u001b[32m   1241\u001b[39m                                    end_idx][\u001b[33m'\u001b[39m\u001b[33mVýroba [kW]\u001b[39m\u001b[33m'\u001b[39m].values / \u001b[32m1000\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1242\u001b[39m day_result = optimizer.optimize_day_strategy_dp(dt_day, vdt_day, fve_day, start_soc=current_soc)\n\u001b[32m   1245\u001b[39m daily_results.append(day_result)\n\u001b[32m   1247\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m day_result[\u001b[33m'\u001b[39m\u001b[33moperational_summary\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mvdt_strategy\u001b[39m\u001b[33m'\u001b[39m]:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Tamerlan.Ismakatov\\Desktop\\workdir\\report\\project1i2\\FveBessOptimizer.py:244\u001b[39m, in \u001b[36mFVE_BESS_Optimizer.optimize_day_strategy_dp\u001b[39m\u001b[34m(self, dt_prices_eur, vdt_prices_eur, fve_generation, start_soc, end_soc)\u001b[39m\n\u001b[32m    239\u001b[39m fve_generation_scaled = fve_generation * \\\n\u001b[32m    240\u001b[39m     \u001b[38;5;28mself\u001b[39m.config[\u001b[33m'\u001b[39m\u001b[33mfve_scale_factor\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m    242\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    243\u001b[39m     \u001b[38;5;66;03m# STEP 1: DP optimization\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m244\u001b[39m     vdt_optimization = \u001b[38;5;28mself\u001b[39m._optimize_vdt_trading(\n\u001b[32m    245\u001b[39m         dt_prices_eur.tolist(), vdt_prices_eur.tolist(), fve_generation_scaled.tolist(),\n\u001b[32m    246\u001b[39m         bess_power, bess_capacity, efficiency, export_limit, import_limit,\n\u001b[32m    247\u001b[39m         start_soc, end_soc, max_cycles\n\u001b[32m    248\u001b[39m     )   \n\u001b[32m    249\u001b[39m     current_trading_report = vdt_optimization.get(\u001b[33m'\u001b[39m\u001b[33mtrading_report\u001b[39m\u001b[33m'\u001b[39m, {\u001b[33m'\u001b[39m\u001b[33mactive_trades\u001b[39m\u001b[33m'\u001b[39m: []})\n\u001b[32m    250\u001b[39m     \u001b[38;5;66;03m# STEP 2: PHYSICAL VALIDATION - new check\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Tamerlan.Ismakatov\\Desktop\\workdir\\report\\project1i2\\FveBessOptimizer.py:340\u001b[39m, in \u001b[36mFVE_BESS_Optimizer._optimize_vdt_trading\u001b[39m\u001b[34m(self, dt_prices, vdt_prices, fve_generation_scaled, bess_power, bess_capacity, efficiency, export_limit, import_limit, start_soc, end_soc, max_cycles)\u001b[39m\n\u001b[32m    334\u001b[39m     result = \u001b[38;5;28mself\u001b[39m._solve_with_discretized_dp_fve_bess(\n\u001b[32m    335\u001b[39m         dt_prices, vdt_prices, fve_generation_scaled, bess_power,\n\u001b[32m    336\u001b[39m         bess_capacity, efficiency, export_limit, import_limit,\n\u001b[32m    337\u001b[39m         start_soc, end_soc, soc_states, soc_step\n\u001b[32m    338\u001b[39m     )\n\u001b[32m    339\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m340\u001b[39m     result = \u001b[38;5;28mself\u001b[39m._solve_with_discretized_dp(\n\u001b[32m    341\u001b[39m         dt_prices, vdt_prices, fve_generation_scaled, bess_power,\n\u001b[32m    342\u001b[39m         bess_capacity, efficiency, export_limit, import_limit,\n\u001b[32m    343\u001b[39m         start_soc, end_soc, soc_states, soc_step\n\u001b[32m    344\u001b[39m     )\n\u001b[32m    346\u001b[39m \u001b[38;5;66;03m# 2. Get the initial strategy from the DP result.\u001b[39;00m\n\u001b[32m    347\u001b[39m original_strategy = result[\u001b[33m'\u001b[39m\u001b[33mdp_strategy\u001b[39m\u001b[33m'\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Tamerlan.Ismakatov\\Desktop\\workdir\\report\\project1i2\\FveBessOptimizer.py:414\u001b[39m, in \u001b[36mFVE_BESS_Optimizer._solve_with_discretized_dp\u001b[39m\u001b[34m(self, dt_prices, vdt_prices, fve_generation_scaled, bess_power, bess_capacity, efficiency, export_limit, import_limit, start_soc, end_soc, soc_states, soc_step)\u001b[39m\n\u001b[32m    411\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m    413\u001b[39m new_soc = \u001b[38;5;28mmax\u001b[39m(\u001b[32m0.0\u001b[39m, \u001b[38;5;28mmin\u001b[39m(new_soc, bess_capacity))\n\u001b[32m--> \u001b[39m\u001b[32m414\u001b[39m new_state_idx = \u001b[38;5;28mself\u001b[39m._find_closest_state_idx(\n\u001b[32m    415\u001b[39m     new_soc, soc_states)\n\u001b[32m    417\u001b[39m profit = \u001b[38;5;28mself\u001b[39m._calculate_action_profit_dp(\n\u001b[32m    418\u001b[39m     action, vdt_prices[t], dt_prices[t])\n\u001b[32m    420\u001b[39m penalty = \u001b[38;5;28mself\u001b[39m._get_interpolation_penalty(\n\u001b[32m    421\u001b[39m     new_soc, soc_states[new_state_idx], soc_step)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Tamerlan.Ismakatov\\Desktop\\workdir\\report\\project1i2\\FveBessOptimizer.py:686\u001b[39m, in \u001b[36mFVE_BESS_Optimizer._find_closest_state_idx\u001b[39m\u001b[34m(self, soc, soc_states)\u001b[39m\n\u001b[32m    684\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_find_closest_state_idx\u001b[39m(\u001b[38;5;28mself\u001b[39m, soc: \u001b[38;5;28mfloat\u001b[39m, soc_states: np.ndarray) -> \u001b[38;5;28mint\u001b[39m:\n\u001b[32m    685\u001b[39m     soc = \u001b[38;5;28mmax\u001b[39m(\u001b[32m0\u001b[39m, \u001b[38;5;28mmin\u001b[39m(soc, soc_states[-\u001b[32m1\u001b[39m]))\n\u001b[32m--> \u001b[39m\u001b[32m686\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.argmin(np.abs(soc_states - soc))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Tamerlan.Ismakatov\\AppData\\Local\\miniconda3\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:1439\u001b[39m, in \u001b[36margmin\u001b[39m\u001b[34m(a, axis, out, keepdims)\u001b[39m\n\u001b[32m   1350\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   1351\u001b[39m \u001b[33;03mReturns the indices of the minimum values along an axis.\u001b[39;00m\n\u001b[32m   1352\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   1436\u001b[39m \u001b[33;03m(2, 1, 4)\u001b[39;00m\n\u001b[32m   1437\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   1438\u001b[39m kwds = {\u001b[33m'\u001b[39m\u001b[33mkeepdims\u001b[39m\u001b[33m'\u001b[39m: keepdims} \u001b[38;5;28;01mif\u001b[39;00m keepdims \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np._NoValue \u001b[38;5;28;01melse\u001b[39;00m {}\n\u001b[32m-> \u001b[39m\u001b[32m1439\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m _wrapfunc(a, \u001b[33m'\u001b[39m\u001b[33margmin\u001b[39m\u001b[33m'\u001b[39m, axis=axis, out=out, **kwds)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Tamerlan.Ismakatov\\AppData\\Local\\miniconda3\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:57\u001b[39m, in \u001b[36m_wrapfunc\u001b[39m\u001b[34m(obj, method, *args, **kwds)\u001b[39m\n\u001b[32m     54\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, *args, **kwds)\n\u001b[32m     56\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m bound(*args, **kwds)\n\u001b[32m     58\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m     59\u001b[39m     \u001b[38;5;66;03m# A TypeError occurs if the object does have such a method in its\u001b[39;00m\n\u001b[32m     60\u001b[39m     \u001b[38;5;66;03m# class, but its signature is not identical to that of NumPy's. This\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     64\u001b[39m     \u001b[38;5;66;03m# Call _wrapit from within the except clause to ensure a potential\u001b[39;00m\n\u001b[32m     65\u001b[39m     \u001b[38;5;66;03m# exception has a traceback chain.\u001b[39;00m\n\u001b[32m     66\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, *args, **kwds)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully analyzed 363 days\n",
+      "Annual income: 649,392 EUR\n"
      ]
     }
    ],
@@ -161,8 +168,8 @@
     "from FveBessOptimizer import analyze_projects, FVE_BESS_Optimizer, export_full_report_to_excel\n",
     "\n",
     "PROJECTS_CONFIG = {\n",
-    "    'fve_bess_phase2': {\n",
-    "        'name': 'fve_bess_phase2',\n",
+    "    'phase2': {\n",
+    "        'name': 'phase2',\n",
     "        'fve_power_mw': 4.124,           \n",
     "        'fve_scale_factor': 4.124 / 1.6,  \n",
     "        'bess_power_mw': 3.2,\n",
@@ -179,10 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0db4699e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Creating Excel report 'full_report_phase2.xlsx' for project 'phase2'...\n",
+      "✅ Report 'full_report_phase2.xlsx' was successfully created!\n"
+     ]
+    }
+   ],
    "source": [
     "for i in results.keys():\n",
     "    optimizer_instance = FVE_BESS_Optimizer(PROJECTS_CONFIG[i])\n",
